--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
 
 				<div class="linksbox">
 					<h3><span class="green">❯</span> [<span class="white">General</span>]</h3>
-			        <a class="grey" target="blank" href="https://www.facebook.com/">Facebook</a>
-			        <a class="grey"  target="blank" href="https://www.chess.com/home#_=_">Chess</a>
-					<a class="grey"  target="blank" href="https://linustechtips.com/main/?_fromLogin=1#_=_">Linus Forum</a>
-			        <a class="grey" target="blank" href="https://www.youtube.com/">Youtube</a>
-			        <a class="grey" target="blank" href="https://github.com/">Github</a>
-					<a class="grey"  target="blank" href="http://na.op.gg/summoner/userName=sqzit">op.gg</a>
+			        	<a class="grey" href="https://www.facebook.com/">Facebook</a>
+			        	<a class="grey" href="https://www.chess.com/home#_=_">Chess</a>
+					<a class="grey" href="https://linustechtips.com/main/?_fromLogin=1#_=_">Linus Forum</a>
+			        	<a class="grey" href="https://www.youtube.com/">Youtube</a>
+			        	<a class="grey" href="https://github.com/">Github</a>
+					<a class="grey" href="http://na.op.gg/summoner/userName=sqzit">op.gg</a>
 				</div>
 
 				<div class="linksbox">
 					<h3><span class="green">❯</span> [<span class="white">Mail and Other</span>]</h3>
-			        <a class="grey" target="blank" href="https://www.fastmail.com/mail/Inbox/?u=4830417d">Fastmail</a>
-			        <a class="grey" target="blank" href="https://mail.protonmail.com/inbox">Protonmail</a>
-			        <a class="grey" target="blank" href="https://outlook.office.com/owa/?realm=unb.ca">UNB Email</a>
-					<a class="grey" target="blank" href="https://www.netflix.com/browse">Netflix</a>
-					<a class="grey" target="blank" href="http://kissanime.ru/AnimeList">KissAnime</a>
-					<a class="grey" target="blank" href="https://outlook.live.com/owa/">Outlook</a>
+			        	<a class="grey" href="https://www.fastmail.com/mail/Inbox/?u=4830417d">Fastmail</a>
+			        	<a class="grey" href="https://mail.protonmail.com/inbox">Protonmail</a>
+			        	<a class="grey" href="https://outlook.office.com/owa/?realm=unb.ca">UNB Email</a>
+					<a class="grey" href="https://www.netflix.com/browse">Netflix</a>
+					<a class="grey" href="http://kissanime.ru/AnimeList">KissAnime</a>
+					<a class="grey" href="https://outlook.live.com/owa/">Outlook</a>
 				</div>
 
 				<div class="linksbox">
 					<h3><span class="green">❯</span> [<span class="white">University</span>]</h3>
-					<a class="grey"  target="blank" href="https://my.unb.ca/Pages/default.aspx">Student Portal</a>
-			        <a class="grey"  target="blank" href="https://lms.unb.ca/d2l/home">D2L</a>
-			        <a class="grey" target="blank" href="https://www.chegg.com/">Chegg</a>
-					<a class="grey" target="blank" href="https://www.wolframalpha.com/">Wolfram|Alpha</a>
-					<a class="grey" target="blank" href="https://stackoverflow.com/questions">Stack Overflow</a>
-					<a class="grey" target="blank" href="https://stackoverflow.com/questions">One Drive</a>
+					<a class="grey" href="https://my.unb.ca/Pages/default.aspx">Student Portal</a>
+			       		<a class="grey" href="https://lms.unb.ca/d2l/home">D2L</a>
+			        	<a class="grey" href="https://www.chegg.com/">Chegg</a>
+					<a class="grey" href="https://www.wolframalpha.com/">Wolfram|Alpha</a>
+					<a class="grey" href="https://stackoverflow.com/questions">Stack Overflow</a>
+					<a class="grey" href="https://unbcloud-my.sharepoint.com/personal/qmerlin_unb_ca/_layouts/15/onedrive.aspx">One Drive</a>
 				</div>
 
 			</div>
