--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h3><span class="green">❯</span> [<span class="white">General</span>]</h3>
 			        	<a class="grey" href="https://www.facebook.com/">Facebook</a>
 			        	<a class="grey" href="https://www.chess.com/home#_=_">Chess</a>
-					<a class="grey" href="https://linustechtips.com/main/?_fromLogin=1#_=_">Linus Forum</a>
+					<a class="grey" href="https://forum.level1techs.com/">Level 1 Tech Forum</a>
 			        	<a class="grey" href="https://www.youtube.com/">Youtube</a>
 			        	<a class="grey" href="https://github.com/">Github</a>
 					<a class="grey" href="http://na.op.gg/summoner/userName=sqzit">op.gg</a>
