--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			        	<a class="grey" href="https://mail.protonmail.com/inbox">Protonmail</a>
 			        	<a class="grey" href="https://outlook.office.com/owa/?realm=unb.ca">UNB Email</a>
 					<a class="grey" href="https://www.netflix.com/browse">Netflix</a>
-					<a class="grey" href="https://www.masterani.me/anime">Masterani</a>
+					<a class="grey" href="https://ajera.com/V007607/#_1556659751041?V=Home&T=120&H=4800780000">Ajera</a>
 					<a class="grey" href="https://outlook.live.com/owa/">Outlook</a>
 				</div>
 
