--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<a class="grey" href="https://forum.level1techs.com/">Level 1 Tech Forum</a>
 			        	<a class="grey" href="https://www.youtube.com/">Youtube</a>
 			        	<a class="grey" href="https://github.com/">Github</a>
-					<a class="grey" href="http://na.op.gg/summoner/userName=sqzit">op.gg</a>
+					<a class="grey" href="https://www.dropbox.com/h">Dropbox</a>
 				</div>
 
 				<div class="linksbox">
@@ -32,7 +32,7 @@
 			        	<a class="grey" href="https://mail.protonmail.com/inbox">Protonmail</a>
 			        	<a class="grey" href="https://outlook.office.com/owa/?realm=unb.ca">UNB Email</a>
 					<a class="grey" href="https://www.netflix.com/browse">Netflix</a>
-					<a class="grey" href="https://ajera.com/V007607/#_1556659751041?V=Home&T=120&H=4800780000">Ajera</a>
+					<a class="grey" href="https://mail.google.com/mail/u/2/#inbox">Cape d'Or Mail</a>
 					<a class="grey" href="https://outlook.live.com/owa/">Outlook</a>
 				</div>
 
