--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<h3><span class="green">❯</span> [<span class="white">University</span>]</h3>
 					<a class="grey" href="https://my.unb.ca/Pages/default.aspx">Student Portal</a>
 			       		<a class="grey" href="https://lms.unb.ca/d2l/home">D2L</a>
-					<a class="grey" href="http://gen.lib.rus.ec/>Libgen</a>
+					<a class="grey" href="http://gen.lib.rus.ec/">Libgen</a>
 					<a class="grey" href="https://stackoverflow.com/questions">Stack Overflow</a>
 					<a class="grey" href="https://unbcloud-my.sharepoint.com/personal/qmerlin_unb_ca/_layouts/15/onedrive.aspx">One Drive</a>
 					<a class="grey" href="https://www.reddit.com/">Reddit</a>
